# TicTacToe

./: .gitignore  README.md
Android/: .gitignore  build.gradle  deployment_cert.der  gradle.properties  local.properties
Android/app/: .gitignore  CMakeLists.txt  build.gradle  lint.xml
Android/app/src/androidTest/java/com/mythica/ticmytac/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CTicTacToe.cpp  CTicTacToe.h  Main.cpp  TurnLog.cpp  TurnLog.h  native-lib.cpp
Android/app/src/main/java/com/mythica/ticmytac/: MainActivity.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: colors.xml  strings.xml
Android/app/src/test/java/com/mythica/ticmytac/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Linux/: CMakeLists.txt
Linux/src/: TicTacLinux.cpp
Windows/: .gitignore  Main.cpp  TicTacToe.sln  TicTacToe.vcxproj
common/: CTicTacToe.cpp  CTicTacToe.h  TurnLog.cpp  TurnLog.h
node/: .gitignore  TicTacToeV8.cpp  binding.gyp  cgdv-lib.js  install.cmd  package.json  tic-tac-svc.js  tic-tac-test.js  tic-tac-toe.js
node/src/: TicTacToeV8.cpp
service/: .gitignore  package.json  ticTacSvc.js
